# pqr-beta

./: COMANDOS DE TERMINAL.txt  COMO RODAR LOCAL LINUX.txt  Dckrfile.grande-demais  Dockerfile  README.md  pyproject.toml
docs/source/: build_faiss.rst  chatbot.knowledge.rst  chatbot.migrations.rst  chatbot.rst  conf.py  crawler.rst  data.rst  index.rst  manage.rst  web.rst
web/: build_faiss.py  manage.py
web/FAISS/: index.faiss  index.pkl
web/chatbot/: apps.py  rag_engine.py  rag_engine.py_bak  urls.py  views.py
web/chatbot/knowledge/: knowledge.py
web/crawler/: Dockerfile  crawler_exec.py
web/data/bronze/: 2025-08-26_abm_org_br_9ecbc8078d.json  2025-08-26_act_alz_org_07b4145c02.json  2025-08-26_agenciabrasil_ebc_com_br_7f9d0ce0ea.json  2025-08-26_agrobrasilia_com_br_03a292d459.json  2025-08-26_anprotec_org_br_264bed96b9.json  2025-08-26_auditoriacidada_org_br_c6b976cfa3.json  2025-08-26_battistrada_com_0e4d646005.json  2025-08-26_battistrada_com_af38aa0f5a.json  2025-08-26_battistrada_com_cc4b2dd553.json  2025-08-26_battistrada_com_e8f2f87e0a.json  2025-08-26_brasilescola_uol_com_br_b9573d1e9a.json  2025-08-26_dflegis_df_gov_br_432a35c9b9.json  2025-08-26_dodf_df_gov_br_fde4511266.json  2025-08-26_folha_qconcursos_com_d7706c9f29.json  2025-08-26_g1_globo_com_5bc3352ab7.json  2025-08-26_g1_globo_com_7356835b37.json  2025-08-26_g1_globo_com_78efc4756b.json  2025-08-26_g1_globo_com_a70c30141c.json  2025-08-26_g1_globo_com_b9d5bcc3e6.json  2025-08-26_g1_globo_com_e7fde4a801.json  (+64 more)
web/web/: asgi.py  settings.py  urls.py  wsgi.py
(+1 files in other folders)
