[project]
name = "chatbot"
version = "0.3.0"
description = "Chatbot RAG em Django"
authors = [
    { name = "toledosnows", email = "felipe.toledo.neves@gmail.com" },
    { name = "jobsrobson", email = "jobsrobson@gmail.com" },
    { name = "guhenriquetorres", email = "gustavohenriquetorres@gmail.com" },
    { name = "vkmb-17", email = "victor.brito@iesb.edu.br " },
]

package-mode = false  # impede o erro de instalação de "root package"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = ">=5.2.5,<6.0.0"
langgraph = ">=0.6.4,<0.7.0"
langchain = ">=0.3.27,<0.4.0"
langchain-openai = ">=0.3.30,<0.4.0"
tavily-python = ">=0.7.10,<0.8.0"
python-dotenv = ">=1.1.1,<2.0.0"
langchain-community = ">=0.3.27,<0.4.0"
langchain-google-genai = ">=2.1.12,<3.0.0"
sentence-transformers = ">=2.2.2,<3.0.0"
faiss-cpu = ">=1.8.1,<2.0.0"
langchain-huggingface = ">=0.3.1,<0.4.0"
sphinx = ">=8.2.3,<9.0.0"
sphinxawesome-theme = ">=5.3.2,<6.0.0"

# 👇 força Torch CPU somente do repo oficial
torch = { version = ">=2.5.1,<3.0.0", source = "torch" }

# truque para impedir que bibliotecas NVIDIA sejam puxadas
nvidia = { version = "*", optional = true, markers = "python_version < '0.0'" }

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.extras]
cpu = ["faiss-cpu", "sentence-transformers"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
